# pan-os-policy-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: corpus-notes.md
