[project]
name="pan-os-policy_agent"
version="0.0.1"
requires-python=">=3.11"
description="AI agent that validates hypotetical security policy against the current policy set on the NGFW"

[tool.uv.workspace]
members=["packages/*"]

[tool.ruff]
line-length=100

[tool.uv]
package=false

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mypy",
]

