[project]
name="pan-os-policy-agent"
version="0.0.1"
requires-python = ">=3.11,<3.12"
description="AI agent that validates hypotetical security policy against the current policy set on the NGFW"

dependencies = [
    "pan-os-mcp",
]
[tool.uv.workspace]
members=["packages/*"]

[tool.ruff]
line-length=100

[tool.uv]
package=false

[tool.uv.sources]
pan-os-mcp = { workspace = true }

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mypy",
]

